--- a/src/html/interviews/intrvw_ajm02.html
+++ b/src/html/interviews/intrvw_ajm02.html
@@ -5,19 +5,14 @@
             text: {
                 title: "das ist moderne Sklaverei",
                 main: [
-                    `Wir vergleichen nur uns Ausländer untereinander. Die polnischen
-Kollegen, die auch kein Deutsch gesprochen haben, also die haben
-über 1000 Mark bekommen, aber wir nur 400 Mark. Deshalb haben
-wir nein gesagt. Das ist das Gleiche wie moderne Sklaverei. Die anderen sind früher mit Ketten um den Hals gekommen und wir sind
-ohne Ketten von Afrika hierher gekommen, aber trotzdem gibt es
-keinen Unterschied. Das war früher Sklaverei und jetzt ist sie modern.`,
-                
+                    `Wir vergleichen nur [uns] mit Ausländer. Die Polen, die Kollegen, die auch kein Deutsch gesprochen haben, also die haben über 1000 Mark bekommen, aber wir 400 Mark. Deshalb haben wir nein gesagt, das ist das Gleiche, wie wenn man sagt, das ist moderne Sklaverei. Die anderen sind früher gekommen, mit Ketten um den Hals oder so, und wir sind ohne Ketten von Afrika hierhergekommen, aber trotzdem ist der Unterschied nicht da. Das war eine Sklaverei früher und jetzt ist sie modern.`,
                 ],
                 author: "Augusto Jone Munjunga",
                 authorLink: "../bio.html#munjunga",
                 audioFilePath: "/public/audio/AJM_02.mp3",
                 imageFilePath: "/public/images/mittweida_vertragsarbeiter.jpg",
-                imageCaption: "Vertragsarbeiter aus Mosambik 1987 in Mittweida. Bildcredit: Bundesarchiv, Bild 183-1987-0618-301/CC-BY-SA 3.0",
+                imageCaption:
+                    "Vertragsarbeiter aus Mosambik 1987 in Mittweida. Bildcredit: Bundesarchiv, Bild 183-1987-0618-301/CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ajm01.html",
                 nextLink: "intrvw_ot02.html",
