--- a/src/html/interviews/intrvw_ajm03.html
+++ b/src/html/interviews/intrvw_ajm03.html
@@ -3,23 +3,10 @@
     <script locals>
         module.exports = {
             text: {
-                title: "ich dachte ihr seid schon weg",
+                title: "ich dachte, ihr seid schon weg",
                 main: [
-                    `Diese Zeit, auch bevor die [ersten afrikinschen] Kollegen schon gegangen war, auf die Straße zu gehen war schon sehr sehr sehr sehr
-gefährlich. Im Betrieb haben die Kollegen gesagt „Wann geht ihr
-denn? Du bist ja immer noch hier. Ich dachte ihr seid schon weg“.`,
-                    `
-Auf der Straße genau so, Kinder und Jugendliche im Bus oder auf
-die Straße, dann hat man gehört „Ausländer raus! Alle Ausländer“.
-Und unser Name war sowieso nur „Neger, Bimbo“. Da war wirklich
-schlecht, aber was sollst du tun. Du hast gesagt, du bleibst hier. Alles ist schon organisiert, Leute warten auf Abfahrt.`,
-                    `Und dann später
-sind sie gegangen, wir sind hier geblieben und es war noch schlimmer: auf die Straße gehen, musstest du zu dritt, zu viert, fünf Person, aber musst trotzdem gucken, wer kommt da. Wenn die Jugendlichen, welche Leute kommen. Lieber auf die anderen Seite gehen.
-Wir haben auch deutsche Frauen gehabt. Wir konnten nicht zusammen auf die Straße gehen. Auch unsere Frauen mussten vorsichtig
-sein, weil manche kannte man, weil sie mit Schwarzen zusammen
-waren: Negerschlampe und so weiter. Und das war schlimm.`,
-                    `Wir
-haben gesehen, nicht nur die Neger, sonder auch die Fitschis, so genannt die Vietnamesen, genau so keine Chance gehabt.`,
+                    `Diese Zeit, auch bevor die [ersten afrikanischen] Kollegen schon gegangen war, auf die Straße zu gehen, war schon sehr, sehr, sehr, sehr gefährlich. Im Betrieb haben die Kollegen gesagt: „Wann geht ihr denn? Du bist ja immer noch hier. Ich dachte, ihr seid schon weg.“ Auf der Straße genau so, Kinder und Jugendliche im Bus oder auf die Straße, dann hat man gehört „Ausländer raus! Alle Ausländer“. Und unser Name war sowieso nur „Neger, Bimbo“. Da war wirklich schlecht, aber was sollst du tun. Du hast gesagt, du bleibst hier. Alles ist schon organisiert, Leute warten auf Abfahrt. Und dann später sind sie gegangen, wir sind hier geblieben und es war noch schlimmer: Auf die Straße gehen, musstest du zu dritt, zu viert, fünf Person, aber musst trotzdem gucken, wer kommt da. Wenn die Jugendlichen, welche Leute kommen. Lieber auf die anderen Seite gehen.
+                    Wir haben auch deutsche Frauen gehabt. Wir konnten nicht zusammen auf die Straße gehen. Auch unsere Frauen mussten vorsichtig sein, weil manche kannte man, weil sie mit Schwarzen zusammen waren: Negerschlampe und so weiter. Und das war schlimm. Wir haben gesehen, nicht nur die Neger, sondern auch die Fidschis, so genannt die Vietnamesen, genau so keine Chance gehabt.`,
                 ],
                 author: "Augusto Jone Munjunga",
                 authorLink: "../bio.html#munjunga",
