--- a/src/html/interviews/intrvw_ajm04.html
+++ b/src/html/interviews/intrvw_ajm04.html
@@ -5,13 +5,7 @@
             text: {
                 title: "es war wirklich so",
                 main: [
-                    `Beim Einkaufen: Manche Verkäuferin war so nett, aber manche
-Verkäuferin gibst du Geld, sie sagt, sie rufen mit Absicht zu
-jemanden „ich habe Geld von Neger. Ist es richtiges Geld oder
-nicht?“ und hörst du von anderen „schmeiß weg“ oder andere sagt
-„ach, mir ist egal“.`, `Schlimm war es. Wenn man es heute den
-Leuten erzählt, denken sie, man fantasiert, obwohl es wirklich so
-war.`,
+                    `Beim Einkaufen: Manche Verkäuferin war so nett, aber manche Verkäuferin gibst du Geld, sie sagt, sie rufen mit Absicht zu jemanden „ich habe Geld von Neger. Ist es richtiges Geld oder nicht?“ und hörst du von anderen „schmeiß weg“ oder andere sagt „ach, mir ist egal“. […] Schlimm war es. Wenn man es heute den Leuten erzählt, denken sie, man fantasiert, obwohl es wirklich so war.`,
                 ],
                 author: "Augusto Jone Munjunga",
                 authorLink: "../bio.html#munjunga",
