--- a/src/html/interviews/intrvw_dhn01.html
+++ b/src/html/interviews/intrvw_dhn01.html
@@ -5,18 +5,8 @@
             text: {
                 title: "ich liebe Deutschland",
                 main: [
-                    `Ich liebe Deutschland. Von Anfang an, die erste Sekunde, erste
-Stunde. Für mich sind es auch so schöne Erinnerungen. Es waren so
-schöne Zeiten mit den deutschen Kollegen und Kolleginnen zu arbeiten.`,
-                    `Wir fliegen 1988, Ende Herbst und fast Anfang Winter, nach
-Deutschland. Es war so schön für uns, für mich. Die Erinnerung
-vom ersten Tag, der ersten Sekunden und Stunden, werde ich nie
-vergessen. Ein schönes Land, schön ruhig. Auf dem Weg von Berlin nach Chemnitz, machen wir eine Pause von 30 Minuten. Ich war
-einfach im Wald spazieren, ich rieche, ich sehe und will dort bleiben
-für immer. Warum? Das Land von uns [Vietnam] ist auch schön,
-aber viele Ding sind noch nicht schön. Wenn man immer Hunger
-hat und die ganze Zeit daran denken muss, was esse ich morgen,
-übermorgen, was gebe ich dem Kind zu Essen? Das ist ein schlechtes Leben. Mindestens für uns hatten wir hier keine Angst mehr.`,
+                    `Ich liebe Deutschland. Von Anfang an, die erste Sekunde, erste Stunde. Für mich sind es auch so schöne Erinnerungen. Es waren so schöne Zeiten, mit den deutschen Kollegen und Kolleginnen zu arbeiten.
+                    Wir fliegen 1988, Ende Herbst und fast Anfang Winter, nach Deutschland. Es war so schön für uns, für mich. Die Erinnerung vom ersten Tag, der ersten Sekunden und Stunden werde ich nie vergessen. Ein schönes Land, schön ruhig. Auf dem Weg von Berlin nach Chemnitz machen wir eine Pause von 30 Minuten. Ich war einfach im Wald spazieren, ich rieche, ich sehe und will dort bleiben für immer. Warum? Das Land von uns [Vietnam] ist auch schön, aber viele Ding sind noch nicht schön. Wenn man immer Hunger hat und die ganze Zeit daran denken muss, was esse ich morgen, übermorgen, was gebe ich dem Kind zu Essen? Das ist ein schlechtes Leben. Mindestens für uns hatten wir hier keine Angst mehr.`,
                 ],
                 author: "Duong Hoai Nam",
                 authorLink: "../bio.html#nam",
