--- a/src/html/interviews/intrvw_dm01.html
+++ b/src/html/interviews/intrvw_dm01.html
@@ -3,24 +3,18 @@
     <script locals>
         module.exports = {
             text: {
-                title: "Wie ein Theater beobachtet",
+                title: "wie ein Theater beobachtet",
                 main: [
-                    `Ich glaube, unsere Nachbarn haben das alles wie ein Theaterstück
-                    beobachtet.`,
-                    `Wir erlebten keine Solidarität von unseren Nachbarn,
-                    die zwölf Jahre mit uns gelebt haben. Die haben nur durchs Fenster
-                    oder von weiter weg zugeguckt. Die haben versucht zu sehen, was
-                    da los war zwischen den Jugendlichen, die Parolen gerufen haben,
-                    und der Polizei, die mit Hunden da stand. Die waren nur Zuschauer.`,
-                    `2019 war ich wieder in Hoyerswerda, dort habe ich an einer Versammlung mit meinen ehemaligen Nachbarn teilgenommen. Die
-                    haben mir gesagt: „Wir haben das nicht gesehen!“ Aber ich glaube nicht, dass es so war.`,
+                    `Ich glaube, unsere Nachbarn haben das alles wie ein Theater beobachtet. Wir hatten keine Solidarität von unseren Nachbarn, die zwölf Jahre mit uns gelebt haben. Die haben nur zugeguckt durchs Fenster oder von weiter weg. Die haben versucht zu sehen, was da los ist zwischen den Jugendlichen, die Parolen gerufen haben, und der Polizei, die mit Hunden dastand. Die waren nur Zuschauer, es gab keine Solidarität, bis wir nach Hause geflogen sind. Wir haben keine Solidarität von unseren Nachbarn aus Hoyerswerda bekommen.
+                    2019 war ich wieder in Hoyerswerda, dort habe ich an einer Versammlung mit meinen ehemaligen Nachbar teilgenommen. Die haben mir gesagt: „Wir haben das nicht gesehen!“ Aber ich glaube nicht, dass es so war.`,
                 ],
                 author: "David Macou",
                 authorLink: "../bio.html#macou",
                 audioFilePath: "/public/audio/DM_01.mp3",
                 imageFilePath: "/public/images/DM_01.jpg",
                 imageCaption: "Hoyerswerda, 1977. Bildcredit: Bundesarchiv, Bild 183-S0412-0307 CC-BY-SA 3.0",
-                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
+                additionalContext:
+                    "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_ajm04.html",
                 nextLink: "intrvw_jr02.html",
             },
