--- a/src/html/interviews/intrvw_jr01.html
+++ b/src/html/interviews/intrvw_jr01.html
@@ -5,14 +5,9 @@
             text: {
                 title: "das ist im Osten Politik gewesen",
                 main: [
-                    `Ich glaube Ausländerfeindlichkeit ist im Osten irgendwie Politik gewesen. Im Gegensatz zum Westen hat man hier Ausländer ja schon
-früh separiert und aus der Gesellschaft ausgegrenzt, so dass die Einwohner der DDR kaum Kontakt mit ihnen hatten und umgekehrt.
-Was halt drüben in der Bundesrepublik anders gelaufen ist, von
-vornherein. Ich denke, deswegen ist hier die Angst vor den Fremden immer noch so präsent. Diese Angst vor ausländischen Menschen, gerade was Schwarze betrifft oder so, ist eine unbewusste
-Angst.`,
-                    `Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der Schule, aber
-wenn du es im Nachhinein betrachtest, war überhaupt gar kein
-Kontakt gewollt mit den Ausländern.`,
+                    `Ich glaube, Ausländerfeindlichkeit ist im Osten irgendwie Politik gewesen. Im Gegensatz zum Westen hat man hier Ausländer ja schon früh separiert und aus der Gesellschaft ausgegrenzt, sodass die Einwohner der DDR kaum Kontakt mit ihnen hatten und umgekehrt. Was halt drüben in der Bundesrepublik anders gelaufen ist, von vornherein. Ich denke, deswegen ist hier die Angst vor den Fremden immer noch so präsent. Diese Angst vor ausländischen Menschen, gerade was Schwarze betrifft oder so, ist eine unbewusste Angst.
+                    Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
+                    Also für mich, für mich persönlich stellt sich das im Nachgang raus, als wenn die DDR nur Show betrieben hat. In welcher Art Show? Na das Ganze mit dem … Solidaritätsspiel. Ja, genau … das war nur Show, auf jeden Fall. Solidarität mit Nicaragua, Kuba, tralala haste nicht gesehen, Mosambik. Uns wurde immer erzählt in der Schule oder wir sind so erzogen worden … aber wenn du das im Nachgang dann betrachtest, dass gar kein Kontakt gewollt ist.`,
                 ],
                 author: "Jan K. und René K.",
                 authorLink: "../bio.html#jankrenek",
