--- a/src/html/interviews/intrvw_jr02.html
+++ b/src/html/interviews/intrvw_jr02.html
@@ -5,33 +5,10 @@
             text: {
                 title: "es gab keine Grenze",
                 main: [
-                    `Es gab keine sichtbare Grenze. Die aktiv gewesen sind, haben halt
-mehr oder weniger vorne gestanden, und die Schaulustigen, die
-haben sich nahtlos angeschlossen und standen drum herum. In
-meiner Erinnerung war damals der gegenüberliegende Bürgersteig
-gesäumt mit Leuten. Du konntest dort keine Grenze ziehen, wer
-jetzt zu den Attentätern gehört oder wer bloß Zuschauer ist. Es war
-eine Mischung.`,
-                    `Es gab niemand aus den hinteren Reihen, der „Los, los! Ran, ran!“
-gesagt hätte. Das gab‘s so nicht. Es gab also keine Anstachelei, dass
-ältere oder andere Leute gesagt hätten, „du musst jetzt nach vorne
-stürmen.“ Wir haben es einfach gemacht.
-Ich habe in der Zeit, in der ich dort war*, nicht erlebt, dass es
-ernsthafte Sprechchöre gab im Sinne von „Ausländer raus!“ Eher
-sowas wie „wir kriegen dich“ und in der Art. Es ging wirklich um
-diesen unmittelbaren Hass. „Wir kriegen dich, wir machen dich
-fertig, wir machen dich alle.“ Sowas. Aber „Ausländer raus“ war so
-nicht zu hören.`,
-                    `Die Busse haben sie rausgefahren und dadurch war das Ziel weg.
-Zumindest hat man geglaubt, dass die Ausländer weg sind, das
-hat ja gereicht. Die rechte Szene hat sich bis 2014 damit gebrüstet,
-dass Hoyerswerda die einzige ausländerfreie Stadt sei. Was
-eigentlich falsch ist, totaler Quatsch ist. Denn es wurden ja nur
-die Asylbewerber der Albert-Schweitzer-Straße weggefahren. Die
-Vertragsarbeiter sind ja erst nach und nach weggebracht worden.
-Ich bin sogar zur Arbeit gefahren und habe gesagt: „Hoyerswerda
-ist jetzt ausländerfrei“. Das war ich selbst, der das mit Stolz in der
-Stimme gesagt hat.`,
+                    `Es gab jetzt keine sichtbare Grenze. Also die, die aktiv gewesen sind, haben halt mehr oder weniger vorne gestanden, aber das, was jetzt die Schaulustigen waren, die haben sich nahtlos angeschlossen und standen drumherum. In meiner Erinnerung war ja damals die Schweitzer-Straße, der gegenüberliegende Bürgersteig von diesem Block her, war ja gesäumt mit Leuten. Du konntest dort keine Grenze ziehen, wer jetzt zu den Attentätern gehört oder wer bloß Zuschauer ist. […] Ich selbst hab nicht mitbekommen, dass sich da eine ernsthafte Anstachelung in dem Sinne gab […] Es gab jetzt nicht aus den sogenannten hinteren Reihen jemanden, der gesagt hat: „Los, los! Ran, ran!“ Das gab’s so nicht. Nö. Das finde ich sehr interessant. Es gab also keine Motivation durch ältere Leute, die dann … oder durch andere Leute, die gesagt haben, „du musst jetzt vorstürmen.“ Das kam von selbst heraus.
+                    Schweitzer-Straße, ich habe wirklich … ich habe nicht erlebt in dieser Zeit, wo ich dort war, und ich war dicht dran, wegen meinen Eltern, habe ich nicht erlebt, dass es dort ernsthafte Sprechchöre gab in dem Sinne „Ausländer raus!“. Es ging eher „wir kriegen dich“, so was in der Art. Also nicht, dass jemand sagte „Ausländer raus“ oder so was. Es ging wirklich um diesen … diesen umgesetzten Hass. „Wir kriegen dich, wir machen dich fertig, wir machen dich alle.“ So was. Aber nicht von wegen „Ausländer raus“, das war in dem Sinne nicht zu hören. Im Nachhinein wundert mich das jetzt.
+                    Ich bin sogar auf Arbeit gefahren und habe gesagt: „Hoyerswerda ist jetzt ausländerfrei“. Das war ich selbst, der das gesagt hat, mit Stolz in der Stimme. Verdammte Scheiße.
+                    Zumindest hat man’s geglaubt, dass die Ausländer weg wären. Das hat ja gereicht. Die rechte Szene hat sich bis 2014, haben die sich ja damit gebrüstet, Hoyerswerda wäre die einzige Stadt, die ausländerfreie wär und und und … was eigentlich falsch ist. Was totaler Quatsch ist. Weil es wurden ja nur im Prinzip die Asylbewerber aus der Schweitzer-Straße weggefahren.`,
                 ],
                 author: "Jan K. und René K.",
                 authorLink: "../bio.html#jankrenek",
