--- a/src/html/interviews/intrvw_jr03.html
+++ b/src/html/interviews/intrvw_jr03.html
@@ -5,20 +5,16 @@
             text: {
                 title: "Hoyerswerda hat den Anfang gemacht",
                 main: [
-                    `Wenn man das mit Abstand betrachtet, ist auch wirklich zu sehen,
-dass Hoyerswerda den Anfang gemacht hat, in Rostock wurde es
-noch einen Zacken schärfer. Da wurde mit Molotow-Cocktails gearbeitet, Gott sei Dank gab‘s keine Toten. Und dann Mölln*, wo die
-ganze Geschichte wirklich Leben gefordert hat. Das war für mich
-im
-Rückblick unter anderem ein Auslöser, der vielleicht dazu geführt
-hat, dass ich umgedacht habe.`,
+                    `Wenn darüber berichtet worden ist, gab’s ja immer die Aussage „Hoyerswerda, Rostock, Mölln“. Ja! So, das war der Verlauf, das war die Aussage und … wenn man das so mit Abstand betrachtet, ist es ja auch wirklich zu sehen, Hoyerswerda hat den Anfang gemacht, in Rostock war es dann noch einen Zacken schärfer gewesen. Da sind ja richtig mit … mit Molotow-Cocktails und so was gearbeitet worden. Gott sei Dank gab’s keine Toten. Und dann Mölln, wo dann wirklich die ganze Geschichte Leben gefordert hat. Das Ganze. Und das war schon […] 
+                    Dann ist für mich im Nachgang, war das mit auch unter anderem ein Auslöser, was vielleicht dazu geführt hat, dass ich umgedacht habe. Genau kann ich es nicht sagen, aber ist mit eine Möglichkeit. Aber mit Rostock, da habe mir dann … ich hab’s halt zwar wahrgenommen, aber ich habe mir keine Gedanken weiter drum gemacht.`,
                 ],
                 author: "Jan K. und René K.",
                 authorLink: "../bio.html#jankrenek",
                 audioFilePath: "/public/audio/J_R_03.mp3",
                 imageFilePath: "/public/images/J_R_03.jpg",
                 imageCaption: "Postkarte aus den 80er Jahren",
-                additionalContext: "In der Nacht auf den 23. November 1992 gab es in Mölln einen Brandanschlag auf zwei von türkischen Familien bewohnte Häuser mit drei Todesopfern und neun Schwerverletzten.",
+                additionalContext:
+                    "In der Nacht auf den 23. November 1992 gab es in Mölln einen Brandanschlag auf zwei von türkischen Familien bewohnte Häuser mit drei Todesopfern und neun Schwerverletzten.",
                 prevLink: "intrvw_ls01.html",
                 nextLink: "intrvw_mm03.html",
             },
