--- a/src/html/interviews/intrvw_mm01.html
+++ b/src/html/interviews/intrvw_mm01.html
@@ -5,26 +5,15 @@
             text: {
                 title: "der Rassismus wurde noch stärker",
                 main: [
-                    `Wir hatten schon gewusst, dass es anders wird. Aber uns nicht vorgestellt, dass der Rassismus noch stärker, noch öffentlicher wird.
-Als in Deutschland die Wende kam, gab es neue Parteien. Die CDU
-hat immer schlecht über Ausländer gesprochen: „Unser Land wird
-schön, alles wird gut.“ Und das Volk hat gesagt: „Ausländer müssen
-raus. Jetzt können wir endlich was in unserem Land machen.“ Das
-Ganze war nicht so gut für uns. Und dann kam auch die NPD und
-die hat deutlich gesagt: „Ausländer raus. Die Ausländer nehmen uns
-die Arbeit weg, unsere Frauen, unsere Wohnungen. Alle Ausländer
-sind schlecht“.`,
-                    `Wir hatten Angst. Viele Jugendliche haben sich
-so geäußert und klar gemacht, dass sie gegen Ausländer sind. Es war
-eine Katastrophe.`,
+                    `Wir hatten schon gewusst, dass es anders wird. Aber uns nicht vorgestellt, dass der Rassismus noch stärker, noch öffentlicher wird. Als in Deutschland die Wende kam, gab es neue Parteien. Die CDU hat immer schlecht über Ausländer gesprochen: „Unser Land wird schön, alles wird gut.“ Und das Volk hat gesagt: „Ausländer müssen raus. Jetzt können wir endlich was in unserem Land machen.“ Das Ganze war nicht so gut für uns. Und dann kam auch die NPD und die hat deutlich gesagt: „Ausländer raus. Die Ausländer nehmen uns die Arbeit weg, unsere Frauen, unsere Wohnungen. Alle Ausländer sind schlecht.“ 
+                    […] Wir hatten Angst. Viele Jugendliche haben sich so geäußert und klargemacht, dass sie gegen Ausländer sind. Es war eine Katastrophe.`,
                 ],
                 author: "Moises Mvuama",
                 authorLink: "../bio.html#mvuama",
                 audioFilePath: "/public/audio/MM_01.mp3",
                 imageFilePath: "/public/images/MM_01.jpg",
                 imageCaption: "CDU-Wahlplakat, Stadtwahl Bremen, 1991. Bildcredit: KAS/ACDP 10-005 : 602 CC-BY-SA 3.0 DE",
-                additionalContext:
-                    "",
+                additionalContext: "",
                 prevLink: "intrvw_ot03.html",
                 nextLink: "intrvw_ajm03.html",
             },
