--- a/src/html/interviews/intrvw_mm02.html
+++ b/src/html/interviews/intrvw_mm02.html
@@ -5,17 +5,7 @@
             text: {
                 title: "in diesem Land muss ich sterben",
                 main: [
-                    `Und als er gestorben war, für uns war... war wirklich... ich weiß
-nicht, wie kann ich sagen... für uns war sehr sehr bitterlich, dass
-wir... also ich persönlich hab gedacht, dass ja... das heißt... ich als
-Moises ich habe kein Recht zu leben, weil ich schwarz bin, also in
-diesem Land muss ich sterben. … und für uns war wirklich... das
-traurigste Zeit unseres Lebens. Wie kann man getötet werden, nur
-weil er eine andere Hautfarbe hat. Wer hat Recht über jemanden zu
-bestimmen zu leben und zu sterben, weil er andere Hautfarbe hat.`,
-                    `Ich habe mir viele Gedanken gemacht. Ich bin also nicht erwünscht
-auf dieser Welt, ich darf nicht existieren. Das war wirklich schwer
-für uns, sehr sehr schwer für uns.`,
+                    `Und als er gestorben war, für uns war … war wirklich … ich weiß nicht, wie kann ich sagen … für uns war sehr, sehr bitterlich, dass wir … also ich persönlich hab gedacht, dass ja … das heißt … ich als Moises, ich habe kein Recht zu leben, weil ich schwarz bin, also in diesem Land muss ich sterben. … und für uns war wirklich … das traurigste Zeit unseres Lebens. Wie kann man getötet werden, nur weil er eine andere Hautfarbe hat. Wer hat recht, über jemanden zu bestimmen, zu leben und zu sterben, weil er andere Hautfarbe hat. Ich habe mir viele Gedanken gemacht. Ich bin also nicht erwünscht auf dieser Welt, ich darf nicht existieren. Das war wirklich schwer für uns, sehr, sehr schwer für uns.`,
                 ],
                 author: "Moises Mvuama",
                 authorLink: "../bio.html#mvuama",
