--- a/src/html/interviews/intrvw_mm03.html
+++ b/src/html/interviews/intrvw_mm03.html
@@ -5,11 +5,7 @@
             text: {
                 title: "heute habe ich dieses Trauma nicht mehr",
                 main: [
-                    `Heute habe ich dieses Trauma nicht mehr. Aber ich weiß, dass
-jeder Zeit wir eine neue Nachricht hören können, dass die Nazis
-etwas gegen Ausländer getan haben. Dieser Gedanke ist immer da.
-Aber Angst habe ich nicht mehr. Ich bin heute bereit etwas gegen
-Neonazis oder gegen Ausländerfeindlichkeit zu tun.`,
+                    `Heute habe ich dieses Trauma nicht mehr. Aber ich weiß, dass jederzeit wir eine neue Nachricht hören können, dass die Nazis etwas gegen Ausländer getan haben. Dieser Gedanke ist immer da. Aber Angst habe ich nicht mehr. Ich bin heute bereit, etwas gegen Neonazis oder gegen Ausländerfeindlichkeit zu tun.`,
                 ],
                 author: "Moises Mvuama",
                 authorLink: "../bio.html#mvuama",
