--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -5,15 +5,7 @@
             text: {
                 title: "es war nicht böse gemeint",
                 main: [
-                    `Man hatte gar nicht die Möglichkeit sich kulturell miteinander irgendwie vertraut zu machen. Dass, sie die Möglichkeit hatten sich
-an unsere Kultur zu gewöhnen und wir an ihre. Dass Verständnis
-einfach für einander da ist. Wenn etwas passiert ist, wurden sie sicherlich alle abgesptempelt und wir sind vielleicht auch von denen abgestempelt worden. Manch einer verallgemeinert ja dann
-ganz schnell. Es gab so ein Begriff, der war auch nicht böse gemeint... naja heute ist es sowieso ein bisschen schwierig. Viele haben
-„Schningschnongs“ gesagt. Es gab weitere verschiede Begriffe zum
-Beispiel „Fidschis“. Es klingt jetzt ganz schlimm, aber irgendwie war
-es nicht böse gemeint. Für uns gab es auch viele Begriffe. Die Vietnamesen hat man einfach als fleißig und irgendwie nicht so auffällig
-wahrgenommen. Die wurden nicht so negativ behaftet wie vielleicht
-die Mosambikaner oder so.`,
+                    `Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist … und wir sind vielleicht sicherlich auch von denen abgestempelt … einer verallgemeinert dann ganz schnell. Es gab so ein Begriff, der war auch nicht böse gemeint … na ja heute ist es sowieso ein bisschen schwierig. Viele haben „Schningschnongs“ gesagt. Es gab weitere verschiedene Begriffe zum Beispiel „Fidschis“. Es klingt jetzt ganz schlimm, aber irgendwie war es nicht böse gemeint. Für uns gab es auch viele Begriffe. Die Vietnamesen hat man einfach als fleißig und irgendwie nicht so auffällig wahrgenommen. Die wurden nicht so negativ behaftet wie vielleicht die Mosambikaner oder so.`,
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
@@ -22,7 +14,7 @@ die Mosambikaner oder so.`,
                 imageCaption: "Arbeiter vom Kombinat ‚Schwarze Pumpe‘. Bildcredit: Bundesarchiv, Bild 183-32626-0012 CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ia01.html",
-                nextLink: "intrvw_ia02.html"
+                nextLink: "intrvw_ia02.html",
             },
         };
     </script>
