--- a/src/html/interviews/intrvw_ot02.html
+++ b/src/html/interviews/intrvw_ot02.html
@@ -5,13 +5,16 @@
             text: {
                 title: "dieser Begriff „Vertragsarbeiter“",
                 main: [
-                    `Transkription folgt..`,
+                    `Mich hat immer gestört dieser Begriff „Vertragsarbeiter“, weil für meine … also das, was ich immer dachte, dass die hier sind, um ausgebildet zu werden, denn … früher nach der Wende gab’s erst diesen Begriff „Vertragsarbeiter“, das heißt ja, dass die praktisch hier Arbeitsplätze besetzten und ich glaube … das war auch so ein Begriff, der extra dafür [instrumentalisiert] … um die Leute dahin gehend zu instrumentalisieren, „die und die können euch eventuell die Arbeitsplätze wegnehmen“, so habe ich früher gedacht darüber … kurz nach der Wende. Weil ich dachte immer, dass die werden hier ausgebildet … 
+                    […] Da hat man es ja noch nicht als Konkurrenz gesehen. Es war ja keine Konkurrenz, wenn die einfach nur … uns wurde das dann so beigebracht, wir unterstützen die Länder damit, das ist wie Solidarität, wir wurden ja auch so erzogen […] Dieser Konkurrenzgedanke, der kam ja dann erst durch die Wende, weil dann eben der Gedanke, jetzt haben viele ihre Arbeit verloren oder waren gerade auf der Kippe und so … Dann kam das natürlich auf „die nehmen uns jetzt unsere Arbeitsplätze weg“. 
+                    Dann ging es erst richtig los.`,
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
                 audioFilePath: "/public/audio/OT_02.mp3",
                 imageFilePath: "/public/images/OT_02.jpg",
-                imageCaption: "Chemiewerk in Leipzig, 1982. Bildcredit: Bundesarchiv, Bild 183-1982-0528-002 / Grubitzsch (geb. Raphael), Waltraud / CC-BY-SA 3.0",
+                imageCaption:
+                    "Chemiewerk in Leipzig, 1982. Bildcredit: Bundesarchiv, Bild 183-1982-0528-002 / Grubitzsch (geb. Raphael), Waltraud / CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ajm02.html",
                 nextLink: "intrvw_jr01.html",
