--- a/src/html/interviews/intrvw_ot03.html
+++ b/src/html/interviews/intrvw_ot03.html
@@ -5,7 +5,7 @@
             text: {
                 title: "wir waren immer sicher",
                 main: [
-                    `Transkription folgt..`,
+                    `Der richtige Abbau von Arbeitsplätzen ging erst mit der Vereinigung, nach dem 3. Oktober, los. Es war so eine wirre Zeit. Also bei manchen hat man sich gewundert, dass die, was … also, ob die eine andere Meinung hatten auf einmal. So bei manchen Leuten … wahrscheinlich lag es auch daran, dass manche sich nicht getraut haben, ihre Meinung so offen zu sagen. […] Ja, manche haben auch gedacht „Scheiß Ausländer“ oder so was. Aber von manchen kam es dann schon, was sich so ein halbes Jahr vorher noch nicht getraut haben zu sagen. Weil viele Angst hatten um ihren Arbeitsplatz, dann ging es schon los. Wir mussten ja nie um unseren Arbeitsplatz fürchten, also es war … wir waren immer sicher. Egal, was war, du musstest nie um deine Arbeit oder … in der Beziehung mussten wir nie fürchten. Und dann ging es auf einmal schlagartig los. Das waren wir nicht gewöhnt, und dann ging es los mit den ganzen Entlassungen, und das hat viel in den Köpfen gemacht. […] Viele haben dann einfach wirklich Angst gehabt, die dürfen vielleicht bleiben, weil … weiß ich nicht, weil sie billigere Arbeitskräfte sind oder keine Ahnung, warum die … warum sie denken, dass die bleiben und die anderen nicht oder keine Ahnung … Da denkt dann ja wirklich jeder an sich selbst, dann beginnt der Neid und der Hass untereinander und die Missgunst … und dem einen könnte es besser gehen als dem anderen.`,
                 ],
                 author: "Dennis und Silke O.",
                 authorLink: "../bio.html#silkedenniso",
