--- a/src/html/project.html
+++ b/src/html/project.html
@@ -9,16 +9,30 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
-        <main class="flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight mb-24">
+        <main class="mb-24 flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight">
             <!-- 1. -->
-            <div class="mb-6 flex flex-col-reverse sm:flex-row items-center justify-between">
-                <div class="w-full sm:w-1/2 sm:pr-8 text-justify">
-                    Brotherland berichtet von einer Zeit, von der man nur schwer erzählen kann. Die Komplexität der Wendejahre und ihr Erbe
-                    wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
+            <div class="mb-6 flex flex-col items-center justify-between md:flex-row">
+                <div class="w-full text-justify md:w-1/2 md:pr-4 lg:pr-8">
+                    <p>
+                        Brotherland berichtet von einer Zeit, von der man schwer erzählen kann, ohne den Rassismus und die Gewalt sprachlich
+                        zu reproduzieren.
+                    </p>
+                    <p>
+                        Die Komplexität der Wendejahre und ihr Erbe wird durch die Kontextualisierung von Fotos, Archivmaterial und
+                        Portraits - verknüpft mit Interviews – dargestellt.
+                    </p>
+                    <p>In den Interviews und Erzählungen der Zeitzeug:innen sind zum Teil rassistische und gewaltvolle Inhalte zu hören.</p>
                 </div>
-                <div class="w-full mb-4 sm:mb-0 sm:w-1/2 sm:pl-8">
+
+                <div class="py-8 md:hidden">
+                    <a href="virtual-exhibits/ve2.html">
+                        <img src="/public/images/virtAusstCursor.png" width="100%" />
+                    </a>
+                </div>
+
+                <div class="mb-4 w-4/5 md:mb-0 md:w-1/2 md:pl-4 lg:pl-8">
                     <div class="relative aspect-3/2 w-full">
-                        <div class="h-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                        <div class="h-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                             <a href="virtual-exhibits/ve2.html" class="group">
                                 <img
                                     src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
@@ -34,91 +48,85 @@
                 </div>
             </div>
             <!-- 2. -->
-            <div class="mb-6 flex flex-col sm:flex-row items-center justify-between">
-                <div class="w-full  mb-4 sm:mb-0 sm:w-4/5 sm:pr-8">
+            <div class="mb-6 flex flex-col-reverse items-center justify-between md:flex-row">
+                <div class="mb-4 w-4/5 md:mb-0 md:pr-4 lg:pr-8">
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img
-                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg"
-                                class="cursor-ve  object-cover"
-                            />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg" class="cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
-                <div class="w-fit sm:pl-8 text-justify">
+                <div class="mb-4 w-fit text-justify md:mb-0 md:pl-4 lg:pl-8">
                     <p>
-                        Am 9. November 1989 fällt die Berliner Mauer und ein Jahr später wird Deutschland wiedervereinigt. Für viele ein
-                        Fest, die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer
-                        Zeit geprägt von Gewalt und Angst. Wie so oft hat die Geschichte mindestens zwei Seiten.
+                        Am 9. November 1989 fällt die Berliner Mauer, ein Jahr später wird Deutschland wiedervereinigt. Für viele ein Fest,
+                        die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer Zeit,
+                        geprägt von Gewalt und Angst. Wie so oft hat die Geschichte mindestens zwei Seiten.
                     </p>
                     <p>
-                        Eberswalde, 24 November 1990. Der – ehemalige – Vertragsarbeiter Amadeu Antonio Kiowa wird von Neonazis überfallen
-                        und verstirbt am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im eben erst wiedervereinigten
-                        Deutschland. Amadeu Antonio war 1987 als Vertragsarbeiter aus Angola in die DDR gekommen.
+                        Eberswalde, 24. November 1990: Der ehemalige Vertragsarbeiter Amadeu Antonio Kiowa wird von Neonazis überfallen, er
+                        stirbt an den Verletzungen am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im eben erst
+                        wiedervereinigten Deutschland. Amadeu Antonio war 1987 als Vertragsarbeiter aus Angola in die DDR gekommen.
                     </p>
                     <p>
-                        Um den Mangel an Arbeitskräften zu beheben, schloss die DDR ab Anfang der 1960er-Jahre bilaterale Verträge mit
-                        anderen Staaten zur Ausbildung und Beschäftigung von Arbeitskräften ab. Diese sozialistischen Herkunftsländer wurden
-                        als Bruderländer definiert. Die ersten Vertragsarbeiter:innen kamen aus Polen und Ungarn, später auch aus Algerien,
+                        Um den Mangel an Arbeitskräften zu beheben, schloss die DDR ab Anfang der 1960er-Jahre bilaterale Verträge mit
+                        anderen Staaten zur Ausbildung und Beschäftigung von Arbeiter:innen ab. Diese sozialistischen Herkunftsländer wurden
+                        als Bruderländer bezeichnet. Die ersten Vertragsarbeiter:innen kamen aus Polen und Ungarn, später auch aus Algerien,
                         Angola, Kuba, Mosambik und Vietnam.
                     </p>
                 </div>
             </div>
             <!-- 3. -->
-            <div class="mb-6 flex-col-reverse sm:flex-row flex items-center justify-between">
-                <div class="w-fit sm:pr-8 text-justify">
+            <div class="mb-6 flex flex-col items-center justify-between md:flex-row">
+                <div class="mb-4 w-fit text-justify md:mb-0 md:pr-4 lg:pr-8">
                     <p>
-                        Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
-                        Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
-                        Vertragsarbeiter und eine Geflüchtetenunterkunft angegriffen. Zeitweise standen bis zu 500 Schaulustige vor den
-                        Heimen, aus dieser Masse heraus fanden die Angriffe statt. In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger
-                        vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und
-                        Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere
-                        hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.
+                        Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
+                        Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
+                        Vertragsarbeiter:innen und eine Geflüchtetenunterkunft angegriffen. Zeitweise standen bis zu 500 Schaulustige vor
+                        den Heimen, aus dieser Masse heraus fanden die Angriffe statt. In Rostock-Lichtenhagen wurden das Wohnheim
+                        ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen.
+                        Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten
+                        sich mehrere Hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.
                     </p>
                     <p>
-                        Hoyerswerda und Rostock waren, wie alle rechtsextremistischen Anschläge der 1990er-Jahre, Ausdruck rassistischer und
-                        nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
+                        Hoyerswerda und Rostock waren, wie alle rechtsextremistischen Anschläge der 1990er-Jahre, Ausdruck rassistischer und
+                        nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
                     </p>
                 </div>
-                <div class="w-full  mb-4 sm:mb-0 sm:w-4/5 sm:pl-8">
+                <div class="mb-4 w-4/5 md:mb-0 md:pl-4 lg:pl-8">
                     <!-- Image placeholders:  -->
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img
-                                src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg"
-                                class="cursor-ve object-cover"
-                            />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg" class="cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
             </div>
             <!-- 4. -->
-            <div class="my-8 flex flex-col sm:flex-row items-center justify-between">
-                <div class=" mb-4 sm:mb-0 w-full sm:w-4/5 sm:pr-8">
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+            <div class="mb-6 flex flex-col-reverse items-center justify-between md:flex-row">
+                <div class="mb-4 w-4/5 md:mb-0 md:pr-4 lg:pr-8">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
-                <span class="w-fit sm:pl-8">
+                <div class="mb-4 w-fit md:mb-0 md:pl-4 lg:pl-8">
                     <p>
                         In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
-                        die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß machen
-                        oder wieso der Rassismus in den neuen Bundesländern womöglich „verständlich“ sei, wurde erheblich mehr Gewicht
+                        die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß zeigen
+                        oder wieso der Rassismus in den neuen Bundesländern womöglich „verständlich“ sei, wurde erheblich mehr Gewicht
                         gelegt.
                     </p>
                     <p>
                         Wir haben ehemalige Vertragsarbeiter:innen aus Angola, Mosambik und Vietnam interviewt und porträtiert. In den
                         Interviews erzählen sie von ihren Erlebnissen während der Wende. Ebenso haben wir uns aber auch entschieden,
-                        Deutsche zu interviewen, die in den in den 1990er-Jahren in Hoyerswerda, Eberswalde und Rostock gelebt haben, um
-                        mehr von den/ihren Lebensrealitäten während und nach der Wende zu erfahren.
+                        Deutsche zu interviewen, die in den 1990er-Jahren in Hoyerswerda, Eberswalde und Rostock gelebt haben, um mehr von
+                        den/ihren Lebensrealitäten während und nach der Wende zu erfahren.
                     </p>
                     <p>
-                        Die Fotos wurden an den Orten aufgenommen, an denen die Anschläge stattfanden, und zeigen sie in einer zeitlosen
+                        Die Fotos wurden an den Orten aufgenommen, an denen die Anschläge stattfanden und zeigen sie in einer zeitlosen
                         Dimension. Die Stillleben und das Archivmaterial konzentrieren sich auf die Spektakularisierung der Ereignisse und
                         auf verschiedene Facetten der Gewalt.
                     </p>
@@ -126,9 +134,14 @@
                         In der Summe soll <span class="italic">Brotherland</span> die Stimmung deutlich machen, in der die Angriffe
                         stattgefunden haben und von einer breiten Masse legitimiert wurden.
                     </p>
-                </span>
+                    <p>BROTHERLAND ist ein Projekt von <a href="./about.html">Martina Zaninelli und Thomas Jakobs</a></p>
+                </div>
             </div>
-            <p>BROTHERLAND ist ein Projekt von <a href="./about.html">Martina Zaninelli und Thomas Jakobs</a></p>
+            <div class="py-8 md:hidden">
+                <a href="virtual-exhibits/ve2.html">
+                    <img src="/public/images/virtAusstCursor.png" width="100%" />
+                </a>
+            </div>
         </main>
     </body>
 </html>
