--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -88,9 +88,9 @@
                         <!-- Text "Damals in der DDR hat man.."  -->
                         <span>
                             Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
-                            Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es kommt die
+                            Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“ oder: „Es kommt die
                             Kohle“. Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir wollten
-                            lernen und arbeiten
+                            lernen und arbeiten.
                         </span>
                     </div>
                 </div>
@@ -152,9 +152,9 @@
                         <span class="block w-2/5">Das war in Berlin 1982-1983.</span>
                     </div>
 
-                    <div class="w-3/5 -z-10 pr-12">
+                    <div class="-z-10 w-3/5 pr-12">
                         <!-- Baum -->
-                        <div class="-translate-y-[13%] aspect-2/3 w-full">
+                        <div class="aspect-2/3 w-full -translate-y-[13%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" />
                         </div>
                     </div>
