--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -52,8 +52,8 @@
                         <div class="w-4/5 translate-x-[15%]">
                             <!-- Text "Meine Arbeit nehmen die.."  -->
                             <span>
-                                „Meine Arbeit nehmen die mir jetzt weg!“. Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
-                                arbeitlsos. Die Arbeit gab's ja gar nicht mehr.
+                                „Meine Arbeit nehmen die mir jetzt weg!“ Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
+                                arbeitslos. Die Arbeit gab’s ja gar nicht mehr.
                             </span>
 
                             <div class="w-full pt-6">
@@ -124,10 +124,10 @@
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
                         <span class="w-10/12 translate-x-[20%] translate-y-full">
-                            Dass Deutschland einig wird, das hört man schon '89... vom Fernsehen und von der Straße, die Deutschen
-                            unterhalten sich manchmal. Ich hatte dafür keinen Kopf... Ich war jetzt arbeitslos, ich musste irgendwas
-                            versuchen um weiter Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich nicht.
-                            Wir hatten schon genug Probleme im Kopf mit unserer Situation...
+                            Dass Deutschland einig wird, das hört man schon '89 … vom Fernsehen und von der Straße, die Deutschen
+                            unterhalten sich manchmal. Ich hatte dafür keinen Kopf … Ich war jetzt arbeitslos, ich musste irgendwas
+                            versuchen, um weiter Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich
+                            nicht. Wir hatten schon genug Probleme im Kopf mit unserer Situation …
                         </span>
                     </div>
 
@@ -179,13 +179,13 @@
 
                         <span class="mx-auto w-4/5 pt-32 text-left">
                             Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von
-                            drüben und haben uns erstmal geschult. Wir mussten praktisch die Ausbildung nochmal neu machen damit wir
-                            überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch... auch so verletztend. Wir hatten ja
+                            drüben und haben uns erst mal geschult. Wir mussten praktisch die Ausbildung noch mal neu machen, damit wir
+                            überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch … auch so verletzend. Wir hatten ja
                             eine gute Ausbildung, aber das hat auf einmal nicht mehr gezählt und mit welchem Recht? Das hast du einfach
                             nicht verstanden. Und dann hat es auch nicht lange gedauert, dass du auf einmal entlassen wurdest. Das war dann
                             kurz nach der Wende, da wurden ganz viele entlassen. Freunden, die nebenan bei uns hier gewohnt haben, die sind
-                            zu uns gekommen und dann haben wir alle zusammen erstmal geheult so ungefähr. Du hattest auf einmal Angst, Angst
-                            um deine Existenz, was machst du jetzt, wie geht es weiter... das ware wir nicht gewöhnt sowas.
+                            zu uns gekommen und dann haben wir alle zusammen erst mal geheult so ungefähr. Du hattest auf einmal Angst,
+                            Angst um deine Existenz, was machst du jetzt, wie geht es weiter … das waren wir nicht gewöhnt so was.
                         </span>
                     </div>
                 </div>
