--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -82,19 +82,20 @@
                 </div>
 
                 <div class="flex h-fit w-full flex-col items-end justify-start py-32">
-                    <span class="block w-1/2 text-left lg:w-1/3">Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung,</span>
+                    <span class="block w-1/2 text-left lg:w-1/3">Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung.</span>
                     <div class="w-full">
                         <span
                             class="whitespace-nowrap font-roboto text-[6vw] font-medium leading-snug text-red-700 sm:text-[7.25vw] md:text-[6vw] lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
-                            >WIR KOMMEN NICHT RAUS</span
                         >
+                            WIR KOMMEN NICHT RAUS!
+                        </span>
                     </div>
                     <span class="block w-1/2 text-left lg:w-1/3">
                         Die Gefahr war schon da, in den Wohnheimen, wo so viele Vietnamesen und Ausländer gesammelt gewohnt haben. Aber ich
-                        hatte schon eine eigene Wohnung... da hatte ich Glück, in dem Fall. Die Nazis kommen nicht in die deutschen Blöcken.
-                        Nur zu den Wohnheimen, den Ausländerwohnheimen, da kommen die hin. Das habe ich von unsere Leute gehört... es war
-                        schon eine ängstliche Zeit.</span
-                    >
+                        hatte schon eine eigene Wohnung … da hatte ich Glück, in dem Fall. Die Nazis kommen nicht in die deutschen Blöcke.
+                        Nur zu den Wohnheimen, den Ausländerwohnheimen, da kommen die hin. Das habe ich von unsere Leute gehört … es war
+                        schon eine ängstliche Zeit.
+                    </span>
                 </div>
 
                 <div class="relative flex h-fit justify-between">
@@ -156,7 +157,7 @@
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_033.jpg" />
                             </div>
                             <!-- Audio "ich dachte ihr seid schon weg" -->
-                            <div class="absolute bottom-0 -right-[7%] w-1/3 -translate-y-[160%]">
+                            <div class="absolute -right-[7%] bottom-0 w-1/3 -translate-y-[160%]">
                                 <include
                                     src="./partials/interview_audio.html"
                                     locals='{"audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
