--- a/src/html/about.html
+++ b/src/html/about.html
@@ -11,12 +11,12 @@
 
         <main class="m-auto">
             <div
-                class="flex h-full w-full flex-col items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
+                class="flex h-full w-full flex-col flex-wrap items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
             >
-                <div class="flex h-fit w-full flex-col justify-start md:w-1/2 md:pr-6">
-                    <p class="text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
+                <div class="flex h-fit w-full flex-col justify-start md:order-2 md:w-1/2 md:pr-6">
+                    <p class="text-justify text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
-                    <p class="text-red-800 underline">Ausstellungen und Nominierungen</p>
+                    <p class="text-justify text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
 
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
@@ -37,12 +37,12 @@
                     <div>2021 – Landscapes of the Futures, Castelnuovo Fotografia – Castelnuovo di Porto, Rom, IT</div>
                 </div>
 
-                <div class="h-96 w-full md:w-1/2 md:pl-6">
+                <div class="h-fit w-full md:order-1 md:w-1/2 md:pl-6">
                     <p class="text-red-800 underline">Kontakt</p>
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
 
-                    <p class="text-red-800 underline">Biografien</p>
+                    <p class="text-justify text-red-800 underline">Biografien</p>
                     <p>
                         Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
                         zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
@@ -53,33 +53,37 @@
                         Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
                         ausgestellt.
                     </p>
-                    <div class="h-12"></div>
-                    <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
-                    <!-- AAS -->
+                </div>
 
-                    <div class="my-4 w-full">
-                        <a href="https://www.amadeu-antonio-stiftung.de/" target="_blank">
-                            <img class="mx-auto w-1/2" src="/public/images/Logo-AAS-1.jpg" />
-                        </a>
-                    </div>
-                    <div>
-                        und mit der Untersützung der
-                        <a
-                            class="w-1/2"
-                            href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
-                            target="_blank"
-                        >
-                            Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“
-                        </a>
-                    </div>
-                    <!-- Dokumentationszentrum -->
-                    <div class="mt-4 w-full">
-                        <a
-                            href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
-                            target="_blank"
-                        >
-                            <img class="mx-auto w-1/2" src="/public/images/dokzentrum-logo.jpg" />
-                        </a>
+                <div class="mt-4 flex w-full md:order-last">
+                    <div class="ml-auto w-full md:w-1/2">
+                        <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
+                        <!-- AAS -->
+
+                        <div class="my-4 w-full">
+                            <a href="https://www.amadeu-antonio-stiftung.de/" target="_blank">
+                                <img class="mx-auto w-1/2" src="/public/images/Logo-AAS-1.jpg" />
+                            </a>
+                        </div>
+                        <div>
+                            und mit der Untersützung der
+                            <a
+                                class="w-1/2"
+                                href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
+                                target="_blank"
+                            >
+                                Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“
+                            </a>
+                        </div>
+                        <!-- Dokumentationszentrum -->
+                        <div class="mt-4 w-full">
+                            <a
+                                href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
+                                target="_blank"
+                            >
+                                <img class="mx-auto w-1/2" src="/public/images/dokzentrum-logo.jpg" />
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
