--- a/src/html/interviews/intrvw_ajm01.html
+++ b/src/html/interviews/intrvw_ajm01.html
@@ -5,30 +5,9 @@
             text: {
                 title: "ab heute hier ist das euer Arbeitsplatz",
                 main: [
-                    `Am nächsten Tag mussten früh aufstehen, wie ich zu Hause nie
-gemacht hatte. Und so das Aufstehen um 5 Uhr, schnell schnell,
-um 6 Uhr Bus nehmen zum Betrieb. Wo wir im Betrieb ankamen,
-der Gestank und so weiter, war schon „wow“, das ist schlecht. Und
-solche Schreie von den Tieren, Schweinen, Kühen und so. Hmmm
-und das war meine Frage „wo sind wir denn? Was für ein Beruf “.`,
-                    `„Ab heute ist hier das euer Arbeitsplatz!“. Die haben nicht
-Ausbildung gesagt, nur Arbeitsplatz, für vier Jahre und so. Hmmm.
-Also für mich, hmmm, war schon Hammer, was ist die Arbeit? In
-diesem Moment hast du das nicht verstanden, sie sagen wir sollen
-hier arbeiten, aber nicht lernen, aber wie denn arbeiten? Und da
-wollte man keine Diskussion.`,
-                    `In diesem Moment sollen wir in die Kantine gehen und essen.
-Ach Gott, da kommen Leute mit Kittel voll von Blut, mit solchen
-Messer. Tasche voll mit Messer, also da hat man wirklich keine Lust
-mehr gehabt. Was sollen wir denn tun? Mit Messer arbeiten? Tiere
-schlachten? Da hat man tausend Fragen im Kopf gehabt, aber du
-kommst nicht durch, du bist in einem Land, wo du nicht kennst,
-also Sprache kennst du nicht, du bist nur ein Mitglied deiner
-Gruppe, und da alle sind nervös, alle sind wirklich traurig und mit
-wem sollst du denn diskutieren. Mit gar keinem. […]`,
-                    `Die waren
-schon traurig, weil ihr Traum war schon im Wasser, die machen
-nur, weil keine andere Möglichkeit.`,
+                    `Am nächsten Tag mussten früh aufstehen, wie ich zu Hause nie gemacht hatte. Und so das Aufstehen um 5 Uhr; schnell, schnell um 6 Uhr Bus nehmen zum Betrieb. Wo wir im Betrieb ankamen, der Gestank und so weiter, war schon „wow“, das ist schlecht. Und solche Schreie von den Tieren, Schweinen, Kühen und so. Hmmm, und das war meine Frage „wo sind wir denn? Was für ein Beruf?“ […] „Ab heute ist hier das euer Arbeitsplatz!“
+                    Die haben nicht Ausbildung gesagt, nur Arbeitsplatz, für vier Jahre und so. Hmmm. Also für mich, hmmm, war schon Hammer, was ist die Arbeit? In diesem Moment hast du das nicht verstanden, sie sagen, wir sollen hier arbeiten, aber nicht lernen. Aber wie denn arbeiten? Und da wollte man keine Diskussion.
+                    […] In diesem Moment sollen wir in die Kantine gehen und essen. Ach Gott, da kommen Leute mit Kittel voll von Blut, mit solchen Messer. Tasche voll mit Messer, also da hat man wirklich keine Lust mehr gehabt. Was sollen wir denn tun? Mit Messer arbeiten? Tiere schlachten? Da hat man tausend Fragen im Kopf gehabt, aber du kommst nicht durch, du bist in einem Land, wo du nicht kennst, also Sprache kennst du nicht, du bist nur ein Mitglied deiner Gruppe, und da alle sind nervös, alle sind wirklich traurig und mit wem sollst du denn diskutieren. Mit gar keinem. […] Die waren schon traurig, weil ihr Traum war schon im Wasser, die machen nur, weil keine andere Möglichkeit.`,
                 ],
                 author: "Augusto Jone Munjunga",
                 authorLink: "../bio.html#munjunga",
