--- a/src/html/interviews/intrvw_dm02.html
+++ b/src/html/interviews/intrvw_dm02.html
@@ -5,22 +5,16 @@
             text: {
                 title: "Besuch bekommen",
                 main: [
-                    `Im August 1989 haben wir mitbekommen, dass irgendwas nicht stimmt, im Oktober war dann diese Demos mit den DDR Bürgern. Wir hatten Angst und wir sind nicht zu der Demo gegangen.`,
-                    `1990 haben wir dann den ersten „Besuch“ bekommen von mehr als hundert Jugendlichen. Diese Jugendlichen, Neonazis, kamen dann zu
-                    unserem Wohnheim. Die haben dann alles kaputt gemacht, mit Steinen geworfen und so weiter. Die haben uns gesagt, dass sie wieder kommen. Dann war September 1991 und die Jugendlichen sind
-                    wieder gekommen. Und die haben wieder unser Wohnheim kaputt gemacht.`,
-                    `Das waren schlechte Erfahrungen, die ich in den letzten
-                    zwei Jahren da gemacht habe, nachdem ich zwölf Jahre dort gewohnt hatte. 1990 und 1991 war sehr sehr schlecht für mich. Bis
-                    heute vergesse ich diese Erfahrungen nicht, diese Aggressionen die ich gesehen und erlebt habe.`,
-                    `[…] Die haben gesungen: „Ausländer raus. Deutschland den Deutschen. Einpacken und nach Hause fliegen. Ihr seid nicht mehr erwünscht.“ so dass Deutschland ausländerfrei wird. Und natürlich
-                    hat der Betrieb darauf gehört und hat uns gesagt, dass wir einpacken und nach Hause müssen. Und wir sind dann nach Hause geflogen.`,
+                    `Im August 1989 haben wir mitbekommen, dass irgendwas nicht stimmt, im Oktober war dann diese Demos mit den DDR-Bürgern. Wir hatten Angst und wir sind nicht zu der Demo gegangen. 1990 haben wir dann den ersten „Besuch“ bekommen von mehr als hundert Jugendlichen. Diese Jugendlichen, Neonazis, kamen dann zu unserem Wohnheim. Die haben dann alles kaputt gemacht, mit Steinen geworfen und so weiter. Die haben uns gesagt, dass sie wiederkommen. Dann war September 1991 und die Jugendlichen sind wiedergekommen. Und die haben wieder unser Wohnheim kaputt gemacht. Das waren schlechte Erfahrungen, die ich in den letzten zwei Jahren da gemacht habe, nachdem ich zwölf Jahre dort gewohnt hatte. 1990 und 1991 war sehr, sehr schlecht für mich. Bis heute vergesse ich diese Erfahrungen nicht, diese Aggressionen, die ich gesehen und erlebt habe.
+                    […] Die haben gesungen: „Ausländer raus. Deutschland den Deutschen. Einpacken und nach Hause fliegen. Ihr seid nicht mehr erwünscht“, sodass Deutschland ausländerfrei wird. Und natürlich hat der Betrieb darauf gehört und hat uns gesagt, dass wir einpacken und nach Hause müssen. Und wir sind dann nach Hause geflogen.`,
                 ],
                 author: "David Macou",
                 authorLink: "../bio.html#macou",
                 audioFilePath: "/public/audio/DM_02.mp3",
                 imageFilePath: "/public/images/DM_02.jpg",
                 imageCaption: "Hoyerswerda 1991 - Bild mit freundlicher Genehmigung von Detlev Kennerth",
-                additionalContext: "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
+                additionalContext:
+                    "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_ajm03.html",
                 nextLink: "intrvw_mm02.html",
             },
